Week5/kubernetes-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-test
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: app-test
